# TaskForce

./: .gitignore  .taskForceCLI.state  ChangeLog.md  LICENSE  README.md  package.yaml  taskForce.cabal
app/: Main.hs
src/: AppState.hs  Domain.hs  Lib.hs  Report.hs  StateM.hs  Task.hs  Zipper.hs
test/: AppStateSpec.hs  ReportSpec.hs  Spec.hs  TaskSpec.hs  ZipperSpec.hs
