cabal-version: 1.12

name:           taskForce
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/PeteTownshend/taskForce#readme>
homepage:       https://github.com/PeteTownshend/taskForce#readme
bug-reports:    https://github.com/PeteTownshend/taskForce/issues
author:         Volker Bardenhorst
maintainer:     volker-bardenhorst@t-online.de
copyright:      BCM
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/PeteTownshend/taskForce

library
  exposed-modules:
      Lib
      Task
      AppState
      StateM
      Zipper
  other-modules:
      Paths_taskForce
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , uuid >=1.3 && <1.4
    , time >=1.9 && <1.10
    , structured-cli >=2.5 && <2.6
    , mtl >=2.2 && <2.3
    , data-default >= 0.7 && <0.8
    , containers >= 0.6 && < 0.7
    , time >= 1.9 && < 1.10
    , directory >= 1.3.6 && < 1.3.7
  default-language: Haskell2010

executable taskForce
  main-is: Main.hs
  other-modules:
      Paths_taskForce
  hs-source-dirs:
      app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , uuid >=1.3 && <1.4
    , time >=1.9 && <1.10
    , structured-cli >=2.5 && <2.6
    , mtl >=2.2 && <2.3
    , data-default >= 0.7 && <0.8
    , containers >= 0.6 && < 0.7
    , time >= 1.9 && < 1.10
    , directory >= 1.3.6 && < 1.3.7
    , taskForce
  default-language: Haskell2010

test-suite taskForce-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_taskForce
    , AppStateSpec
    , TaskSpec
    , ZipperSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , uuid >=1.3 && <1.4
    , time >=1.9 && <1.10
    , structured-cli >=2.5 && <2.6
    , mtl >=2.2 && <2.3
    , data-default >= 0.7 && <0.8
    , containers >= 0.6 && < 0.7
    , time >= 1.9 && < 1.10
    , taskForce
    , hspec
  build-tool-depends:
    hspec-discover:hspec-discover
  default-language: Haskell2010